[package]
name = "mksls"
version = "0.1.0"
edition = "2021"
authors = ["Yann Salmon"]
description = "Make symlinks specified in files."
readme = "README.md"
repository = "https://github.com/yanns1/mksls"
license = "GPL-3.0"
keyworks = ["symlinks", "dotfiles"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
confy = "0.6.1"
serde = { version = "1.0.197", features = ["derive"] }
