[package]
name = "mksls"
version = "1.0.1"
edition = "2021"
authors = ["Yann Salmon"]
description = "Make symlinks specified in files."
readme = "README.md"
repository = "https://github.com/yanns1/mksls"
license = "GPL-3.0"
keyworks = ["symlinks", "dotfiles"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive", "cargo"] }
confy = "0.6.1"
crossterm = "0.27.0"
lazy_static = "1.4.0"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
walkdir = "2.5.0"

[dev-dependencies]
serial_test = "3.0.0"

